[libc++] Use the new .gen tests to implement __verbose_abort tests
This reduces the amount of boilerplate that we need to generate
for each commit. It also resolves a problem where the modular CI
would run extremely slow on this test because we'd define a macro
before including the standard library, defeating the module cache.

Differential Revision: https://reviews.llvm.org/D151156

--- a/libcxx/test/libcxx/lit.local.cfg
+++ b/libcxx/test/libcxx/lit.local.cfg
@@ -1,4 +1,11 @@
 # The tests in this directory need to run Python
 import pipes, sys
-
 config.substitutions.append(("%{python}", pipes.quote(sys.executable)))
+
+# Several tests in this directory require additional information about libc++ headers
+# to generate tests.
+import base64, lit.util, pickle
+import libcxx.test.header_information
+base64Encode = lambda s: lit.util.to_string(base64.b64encode(lit.util.to_bytes(s)))
+escapedVariables = base64Encode(pickle.dumps(libcxx.test.header_information.variables))
+config.substitutions.append(('%{header-variables}', escapedVariables))
