[libc++] Split sources for <filesystem>
The operations.cpp file contained the implementation of a ton of
functionality unrelated to just the filesystem operations. Splitting
this up into more files will make it possible in the future to support
parts of <filesystem> (e.g. path) on systems where there is no notion
of a filesystem.

Differential Revision: https://reviews.llvm.org/D152377

--- a/libcxx/src/CMakeLists.txt
+++ b/libcxx/src/CMakeLists.txt
@@ -110,9 +110,14 @@ endif()
 
 if (LIBCXX_ENABLE_FILESYSTEM)
   list(APPEND LIBCXX_SOURCES
-    filesystem/filesystem_common.h
-    filesystem/operations.cpp
+    filesystem/directory_entry.cpp
     filesystem/directory_iterator.cpp
+    filesystem/filesystem_clock.cpp
+    filesystem/filesystem_common.h
+    filesystem/filesystem_error.cpp
+    filesystem/operations.cpp
+    filesystem/path_parser.h
+    filesystem/path.cpp
     filesystem/posix_compat.h
     )
   # Filesystem uses __int128_t, which requires a definition of __muloi4 when
